# webassembly-validation

./: README.md
backend/: Cargo.toml  README.md
backend/src/: main.rs
frontend/: flake.nix  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx
go_client/: .gitignore  go.mod  go.sum  main.go
requests/requests/: Create Host.bru  bruno.json
shared/: Cargo.toml  README.md
shared/src/: lib.rs
wasm_validation/: Cargo.toml  LICENSE_MIT  README.md  flake.nix
wasm_validation/src/: lib.rs
wasm_validation_nojs/: Cargo.toml  README.md  flake.nix
wasm_validation_nojs/src/: lib.rs
