[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
serde_path_to_error = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shared = { path = "../shared" }
tower-http = { version = "^0.5.2", features = ["cors"]}